// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TabsContext renders correctly > with activeTabId 1`] = `
<div
  data-testid="tabs-context"
>
  <div
    className="tabsWrapper compact"
    data-testid="tab-list"
  >
    <ul
      className="tabsList"
      role="tablist"
    >
      <li
        aria-controls="tab-list-panel-0"
        aria-disabled={false}
        aria-labelledby="label-tab-list-tab-0"
        aria-selected={false}
        className="tabWrapper tabListTabWrapper"
        data-testid="tab_tab-list-tab-0"
        data-vibe="Tab"
        id="tab-list-tab-0"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="tab"
        tabIndex={-1}
      >
        <div
          className="tabInner tabListTabInner"
          id="label-tab-list-tab-0"
        >
          First
        </div>
      </li>
      <li
        aria-controls="tab-list-panel-1"
        aria-disabled={false}
        aria-labelledby="label-tab-list-tab-1"
        aria-selected={true}
        className="tabWrapper tabListTabWrapper active"
        data-testid="tab_tab-list-tab-1"
        data-vibe="Tab"
        id="tab-list-tab-1"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="tab"
        tabIndex={0}
      >
        <div
          className="tabInner tabListTabInner"
          id="label-tab-list-tab-1"
        >
          Second
        </div>
      </li>
    </ul>
  </div>
  <div
    className="tabPanelsWrapper"
    data-testid="tab-panels"
  >
    <div
      aria-labelledby="tab-list-tab-0"
      className="tabPanelWrapper tabPanel non-active"
      data-testid="tab-panel_tab-list-panel-0"
      id="tab-list-panel-0"
      role="tabpanel"
    >
      First slide
    </div>
    <div
      aria-labelledby="tab-list-tab-1"
      className="tabPanelWrapper tabPanel active animationDirectionRtl"
      data-testid="tab-panel_tab-list-panel-1"
      id="tab-list-panel-1"
      role="tabpanel"
    >
      Second slide
    </div>
  </div>
</div>
`;

exports[`TabsContext renders correctly > with className 1`] = `
<div
  className="test"
  data-testid="tabs-context"
>
  <div
    className="tabsWrapper compact"
    data-testid="tab-list"
  >
    <ul
      className="tabsList"
      role="tablist"
    >
      <li
        aria-controls="tab-list-panel-0"
        aria-disabled={false}
        aria-labelledby="label-tab-list-tab-0"
        aria-selected={true}
        className="tabWrapper tabListTabWrapper active"
        data-testid="tab_tab-list-tab-0"
        data-vibe="Tab"
        id="tab-list-tab-0"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="tab"
        tabIndex={0}
      >
        <div
          className="tabInner tabListTabInner"
          id="label-tab-list-tab-0"
        >
          First
        </div>
      </li>
    </ul>
  </div>
  <div
    className="tabPanelsWrapper"
    data-testid="tab-panels"
  >
    <div
      aria-labelledby="tab-list-tab-0"
      className="tabPanelWrapper tabPanel active animationDirectionRtl"
      data-testid="tab-panel_tab-list-panel-0"
      id="tab-list-panel-0"
      role="tabpanel"
    >
      First slide
    </div>
  </div>
</div>
`;

exports[`TabsContext renders correctly > with empty props 1`] = `
<div
  data-testid="tabs-context"
>
  <div
    className="tabsWrapper compact"
    data-testid="tab-list"
  >
    <ul
      className="tabsList"
      role="tablist"
    >
      <li
        aria-controls="tab-list-panel-0"
        aria-disabled={false}
        aria-labelledby="label-tab-list-tab-0"
        aria-selected={true}
        className="tabWrapper tabListTabWrapper active"
        data-testid="tab_tab-list-tab-0"
        data-vibe="Tab"
        id="tab-list-tab-0"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="tab"
        tabIndex={0}
      >
        <div
          className="tabInner tabListTabInner"
          id="label-tab-list-tab-0"
        >
          First
        </div>
      </li>
    </ul>
  </div>
  <div
    className="tabPanelsWrapper"
    data-testid="tab-panels"
  >
    <div
      aria-labelledby="tab-list-tab-0"
      className="tabPanelWrapper tabPanel active animationDirectionRtl"
      data-testid="tab-panel_tab-list-panel-0"
      id="tab-list-panel-0"
      role="tabpanel"
    >
      First slide
    </div>
  </div>
</div>
`;

exports[`TabsContext renders correctly > with id 1`] = `
<div
  data-testid="tabs-context_test"
  id="test"
>
  <div
    className="tabsWrapper compact"
    data-testid="tab-list"
  >
    <ul
      className="tabsList"
      role="tablist"
    >
      <li
        aria-controls="tab-list-panel-0"
        aria-disabled={false}
        aria-labelledby="label-tab-list-tab-0"
        aria-selected={true}
        className="tabWrapper tabListTabWrapper active"
        data-testid="tab_tab-list-tab-0"
        data-vibe="Tab"
        id="tab-list-tab-0"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="tab"
        tabIndex={0}
      >
        <div
          className="tabInner tabListTabInner"
          id="label-tab-list-tab-0"
        >
          First
        </div>
      </li>
    </ul>
  </div>
  <div
    className="tabPanelsWrapper"
    data-testid="tab-panels"
  >
    <div
      aria-labelledby="tab-list-tab-0"
      className="tabPanelWrapper tabPanel active animationDirectionRtl"
      data-testid="tab-panel_tab-list-panel-0"
      id="tab-list-panel-0"
      role="tabpanel"
    >
      First slide
    </div>
  </div>
</div>
`;
